@@ -2,6 +2,8 @@ glFusion ChangeLog
 
 v1.3.0
 ------
+- Moved hard-coded styles in public_html/layout/nouveau/users/loginform.thtml
+  to style.css, dynamically set loginbox width if oauth enabled (Michael/Eric)
 - Moved hard coded rating speed limit to configuration (Mark)
 - Fixed album re-initialize bug in Media Gallery (Mark)
 - Fixed bug where large files were copied twice when using
